# watchtower

./: .env.local.example  .gitignore  README.md  package.json  vue.config.js
client-web/: .eslintrc.cjs  README.md  index.html  package.json  tsconfig.json  vite.config.ts
client-web/src/: App.vue  types.d.ts
client-web/src/components/: BarChart.vue  TheNavbar.vue  ThumbnailArea.vue  TimelineArea.vue  VideoPlayer.vue
client-web/src/lib/: colors.ts  dataurls.ts
client-web/src/router/: index.ts
client-web/src/stores/: context.ts  project.ts  projects.ts  runtimeState.ts  runtimeStateNavigation.ts
client-web/src/views/: AboutView.vue  ProjectDashboardView.vue  ProjectDetailView.vue  ProjectListView.vue
docs/: deploy.md  deployment.md  develop-client-web.md  develop-pipeline.md  develop.md  get-involved.md  getting-started.md  index.md  integration.md  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
pipeline/: README.md  fetch_data_from_kitsu.py  models.py  pyproject.toml  tests.py
pipeline/scripts/: __init__.py
pipeline/tests/: test_watchtower_pipeline.py  tests.py
pipeline/watchtower_pipeline/: __init__.py  argparser.py  example.py  ffprobe.py  kitsu.py  models.py  writers.py
src/: App.vue
src/components/: About.vue  Dashboard.vue  LoginForm.vue  MainView.vue  ThumbnailView.vue  TimelineView.vue  Toolbar.vue  VideoPlayer.vue
src/lib/: dataurls.js
src/router/: index.js
